# aurora

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app_manager.rs  drawing.rs  focus.rs  input_handler.rs  lib.rs  main.rs  render.rs  renderer.rs  state.rs  udev.rs  window_manager.rs  winit.rs  workspace.rs  x11.rs
src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
